Add pages and components

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -1,6 +1,25 @@
-<main>
-  <p>Claudia</p>
-  <p>Ivan</p>
-  <p>Gabriel</p>
-  <a href="/">Home</a>
-</main>
+---
+import "../styles/global.css";
+import "../styles/pages.css";
+---
+
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Equipo</title>
+  </head>
+  <body>
+    <main>
+      <h1>Equipo 2</h1>
+      <div class="team">
+        <p>Claudia Álvarez de la Rosa</p>
+        <p>Iván Calatayud Palacios</p>
+        <p>Gabriel Domínguez Durán</p>
+      </div>
+      <a href="/">Home</a>
+    </main>
+  </body>
+</html>
