--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,28 @@
-<main>
-  <p>
-    Este es un tarbajo para la UOC de la asignatura Nuevas Formas Narrativas del
-    Master Universitario de Periodismo y Comunicación Digital: Datos y Nuevas
-    Narrativas
-  </p>
-  <a href="/">Home</a>
-</main>
+---
+import "../styles/global.css";
+import "../styles/pages.css";
+---
+
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Acerca de</title>
+    <style></style>
+  </head>
+  <body>
+    <main>
+      <h1>Acerca de</h1>
+      <div class="text">
+        <p>
+          "Este es un trabajo para la UOC de la asignatura Nuevas Formas
+          Narrativas del Máster Universitario de Periodismo y Comunicación
+          Digital: Datos y Nuevas Narrativas."
+        </p>
+      </div>
+      <a href="/">Home</a>
+    </main>
+  </body>
+</html>
