--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,24 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 import Hero from "../components/Hero.astro";
+import Page1 from "../components/Page1.astro";
 ---
 
-<body>
-  <Header />
-  <Hero />
-  <Footer />
-  <script>
-    import "../scripts/menu.js";
-  </script>
-</body>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Uoc Equipo 2</title>
+  </head>
+  <body>
+    <Header />
+    <Hero />
+    <Page1 />
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
+  </body>
+</html>
