--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,11 @@
+:root {
+  --primary-color: hsl(0, 0%, 100%);
+  --secondary-color: rgb(122, 237, 247);
+}
+
 html {
   background-color: #000000;
-  font-family: sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 * {
@@ -12,11 +17,6 @@ body {
   width: 100%;
   max-width: 100vw;
   line-height: 1.5;
-}
-
-:root {
-  --primary-color: hsl(0, 0%, 100%);
-  --secondary-color: rgb(122, 237, 247);
 }
 
 /* nav styles */
