Fix padding on small screen

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ import "../styles/pages.css";
     <style></style>
   </head>
   <body>
-    <main>
+    <main class="page-continer">
       <h1>Acerca de</h1>
       <div class="text">
         <p>
