--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,8 +4,9 @@ import Arrow from "./Arrow.astro";
 
 <style>
   .hero {
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
+    height: 100%;
+    padding: 0;
     overflow: hidden;
     background-image: url("https://images.unsplash.com/photo-1498757581981-8ddb3c0b9b07?q=80&w=1976&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); /* URL to the image */
     background-position: center;
