--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -12,7 +12,7 @@ import "../styles/pages.css";
     <title>Equipo</title>
   </head>
   <body>
-    <main>
+    <main class="page-continer">
       <h1>Equipo 2</h1>
       <div class="team">
         <p>Claudia Álvarez de la Rosa</p>
