--- a/src/components/Arrow.astro
+++ b/src/components/Arrow.astro
@@ -63,5 +63,11 @@
       opacity: 0;
     }
   }
+
+  @media (max-width: 768px) {
+    .scroll-down {
+      display: none;
+    }
+  }
 </style>
 <div class="scroll-down"></div>
