--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 import Hero from "../components/Hero.astro";
 import Page1 from "../components/Page1.astro";
+import Page2 from "../components/Page2.astro";
 ---
 
 <html lang="es">
@@ -18,6 +19,7 @@ import Page1 from "../components/Page1.astro";
     <Header />
     <Hero />
     <Page1 />
+    <Page2 />
     <Footer />
     <script>
       import "../scripts/menu.js";
