--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,14 +4,20 @@ import Arrow from "./Arrow.astro";
 
 <style>
   .hero {
+    position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     padding: 0;
     overflow: hidden;
-    background-image: url("https://images.unsplash.com/photo-1498757581981-8ddb3c0b9b07?q=80&w=1976&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); /* URL to the image */
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+  }
+
+  video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .hero-wrapper {
@@ -43,6 +49,18 @@ import Arrow from "./Arrow.astro";
 <main>
   <div class="hero">
     <section class="hero-wrapper">
+      <div class="video-wrapper">
+        <video
+          playsinline
+          autoplay
+          muted
+          loop
+          poster="../../public/images/poster.png"
+        >
+          <source src="../../public/videos/portugal.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+      </div>
       <div class="hero-top">Portugal</div>
       <div class="hero-bottom" aria-hidden="true">Portugal</div>
     </section>
