--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,12 +7,13 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   background-color: #000000;
   font-family: Arial, sans-serif;
+  width: 100%;
   margin: 0;
   padding: 0;
-  width: 100%;
 }
 
 /* nav styles */
@@ -46,8 +47,8 @@ a {
   width: 100vw;
   height: 100vh;
   transform: translate(-50%, -50%);
-  background-color: rgba(179, 234, 243, 0.388);
-  backdrop-filter: blur(90px);
+  background-color: rgba(58, 59, 59, 0.493);
+  backdrop-filter: blur(20px);
   z-index: 1000;
 }
 
@@ -77,7 +78,7 @@ a {
   background-color: #dce7ec;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .expanded {
     width: 100%;
     height: 100%;
@@ -88,5 +89,6 @@ a {
   }
   a {
     font-size: 1.2rem;
+    padding: 3rem 1rem;
   }
 }
