--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -50,14 +50,8 @@ import Arrow from "./Arrow.astro";
   <div class="hero">
     <section class="hero-wrapper">
       <div class="video-wrapper">
-        <video
-          playsinline
-          autoplay
-          muted
-          loop
-          poster="../../public/images/poster.png"
-        >
-          <source src="../../public/videos/portugal.mp4" type="video/mp4" />
+        <video playsinline autoplay muted loop poster="images/poster.png">
+          <source src="videos/portugal.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
       </div>
