--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,6 +67,11 @@ a {
   position: fixed;
   top: 2rem;
   left: 2rem;
+  z-index: 10;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0.5rem;
+  border-radius: 5px;
   cursor: pointer;
 }
 
@@ -74,7 +79,7 @@ a {
   display: block;
   width: 40px;
   height: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   background-color: #dce7ec;
 }
 
