--- a/src/components/Arrow.astro
+++ b/src/components/Arrow.astro
@@ -69,5 +69,11 @@
       display: none;
     }
   }
+
+  @media (min-width: 1800px) {
+    .scroll-down {
+      left: 30vw;
+    }
+  }
 </style>
 <div class="scroll-down"></div>
