--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,10 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 import Hero from "../components/Hero.astro";
-import Page1 from "../components/Page1.astro";
-import Page2 from "../components/Page2.astro";
+import Section1 from "../components/Section1.astro";
+import Section2 from "../components/Section2.astro";
+import Section3 from "../components/Section3.astro";
+import Section4 from "../components/Section4.astro";
 ---
 
 <html lang="es">
@@ -18,8 +20,10 @@ import Page2 from "../components/Page2.astro";
   <body>
     <Header />
     <Hero />
-    <Page1 />
-    <Page2 />
+    <Section1 />
+    <Section2 />
+    <Section3 />
+    <Section4 />
     <Footer />
     <script>
       import "../scripts/menu.js";
