--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@ body {
   background-color: #000000;
   font-family: Arial, sans-serif;
   width: 100%;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -47,8 +47,7 @@ a {
   width: 100vw;
   height: 100vh;
   transform: translate(-50%, -50%);
-  background-color: rgba(58, 59, 59, 0.493);
-  backdrop-filter: blur(20px);
+  background-color: rgb(0, 0, 0);
   z-index: 1000;
 }
 
@@ -87,7 +86,6 @@ a {
   .expanded {
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0);
   }
 
   #closeButton {
@@ -96,5 +94,22 @@ a {
   a {
     font-size: 1.2rem;
     padding: 3rem 1rem;
+  }
+}
+
+@media (min-width: 1800px) {
+  html,
+  body {
+    width: 80%;
+  }
+
+  .expanded {
+    width: 65%;
+    height: 100%;
+  }
+
+  .hamburger {
+    top: 2rem;
+    left: 20vw;
   }
 }
