--- a/src/components/Section2.astro
+++ b/src/components/Section2.astro
@@ -28,8 +28,15 @@
   }
 
   .page2-content2 {
-    grid-column: 2 / 4;
+    grid-column: 1 / 3;
     grid-row: 3 / 4;
+    font-size: 1.5rem;
+    color: #f8f8f8;
+    padding: 0.5rem;
+  }
+  .page2-content3 {
+    grid-column: 2 / 4;
+    grid-row: 4 / 5;
     font-size: 1.5rem;
     color: #f8f8f8;
     padding: 0.5rem;
@@ -37,12 +44,28 @@
 
   .page2-photo {
     grid-column: 1 / 2;
-    grid-row: 2 / 4;
+    grid-row: 2 / 3;
+    padding: 0.5rem;
+  }
+  .page2-photo2 {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    padding: 0.5rem;
+  }
+  .page2-photo3 {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
     padding: 0.5rem;
   }
 
   .page2-figure > img {
     width: 100%;
+  }
+
+  figcaption {
+    font-size: 0.7rem;
+    color: #f8f8f8;
+    padding: 0.5rem;
   }
 
   @media (max-width: 900px) {
@@ -80,14 +103,26 @@
   </section>
   <section class="page2-photo">
     <figure class="page2-figure">
+      <img src="images/mina_de_litio.png" alt="Mina de litio en Portugal" />
+      <figcaption>Mina de litio en Portugal. Foto via iStock</figcaption>
+    </figure>
+  </section>
+  <section class="page2-photo2">
+    <figure class="page2-figure">
       <img
-        src="https://images.unsplash.com/photo-1498757581981-8ddb3c0b9b07?q=80&w=1976&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt="Old lady portrait"
+        src="images/Rebelo_de_Sousa_Antonio_Costa_ EFE.png"
+        alt="Rebelo de Sousa y Antonio Costa en una reunion"
       />
-      <figcaption>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum,
-        distinctio minima. Aspernatur error exercitationem ut?
-      </figcaption>
+      <figcaption>Rebelo de Sousa y Antonio Costa. Foto via EFE</figcaption>
+    </figure>
+  </section>
+  <section class="page2-photo3">
+    <figure class="page2-figure">
+      <img
+        src="images/Victoria_Rebelo_de_Sousa.jpeg"
+        alt="Conferencia de Rebelo de Sousa"
+      />
+      <figcaption>Victoria de Rebelo de Sousa</figcaption>
     </figure>
   </section>
   <section class="page2-content2">
@@ -100,10 +135,16 @@
       molestias deleniti esse voluptate vitae qui rem dicta ullam eum, laborum
       minima laudantium.
     </p>
+  </section>
+  <section class="page2-content3">
     <p>
-      Beatae sed aperiam, dolores ut magni quaerat quam, molestias corporis
-      tenetur cupiditate laboriosam, fugit possimus nobis illum consequuntur
-      voluptates! Corporis cumque quia vitae?
+      Nobis at eaque iusto harum ad omnis. Fuga facilis debitis sit esse, ipsam
+      consectetur atque ea tenetur corporis molestias excepturi doloremque
+      distinctio repudiandae quam ipsum magni tempora pariatur animi saepe est,
+      eos eligendi reprehenderit voluptas. Deserunt accusamus perferendis
+      tempore molestiae modi debitis fugiat, ratione est aliquam harum quia
+      molestias deleniti esse voluptate vitae qui rem dicta ullam eum, laborum
+      minima laudantium.
     </p>
   </section>
 </section>
