Add meta description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,11 @@ import Section4 from "../components/Section4.astro";
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title>Uoc Equipo 2</title>
+    <meta
+      name="description"
+      content="Explora la crisis política en Portugal a través de nuestro innovador docu-web, parte de un proyecto de maestría en periodismo de la UOC. Sumérgete en narrativas multimedia profundas, análisis expertos y testimonios exclusivos que revelan las complejidades y el impacto de la situación actual en la sociedad portuguesa. Descubre más en nuestra plataforma interactiva."
+    />
+    <title>Crisis en Portugal</title>
   </head>
   <body>
     <Header />
