--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -43,7 +43,7 @@
       <a href="/foro/">Foro</a>
       <a
         href="https://open.spotify.com/genre/0JQ5DArNBzkmxXHCqFLx2J"
-        target="_blank">Podscast</a
+        target="_blank">Podcast</a
       >
       <a href="https://www.twitch.tv/" target="_blank">live stream (Twitch)</a>
       <a href="/about/">Acerca de este trabajo</a>
