--- a/src/components/Section3.astro
+++ b/src/components/Section3.astro
@@ -39,7 +39,7 @@ const { video, poster } = Astro.props;
 
 <section class="page3-grid">
   <div class="page3-header">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>EL caso de las elecciones portuguesas.</p>
   </div>
   <section class="page3-video">
     <video controls poster={poster}>
